# jarvis

./: .env.example  .gitignore  README.md  ideas.md  ingest_output.txt  pyproject.toml  run_jarvis.py
data/certs/: cert.pem  key.pem
data/chroma/: .gitkeep  chroma.sqlite3
documents/: resume.md
models/: .gitkeep
scratch/: benchmark.py  clear_code_snippets.py  current_diff.diff  inspect_chroma.py  test_denoise_math.py  test_ha.py  test_memory.py  test_rnnoise.py
scripts/: download_models.py  index_codebase.py  ingest.py  setup_db.py  verify_ingestion.py  verify_rag.py
src/jarvis/: __init__.py  main.py
src/jarvis/config/: __init__.py  settings.py
src/jarvis/core/: __init__.py  cloudflare.py  executor.py  homeassistant.py  logging.py  ssl_gen.py
src/jarvis/knowledge/: __init__.py  database.py  models.py  repository.py  search.py
src/jarvis/llm/: __init__.py  context_builder.py  engine.py  prompts.py
src/jarvis/orchestrator/: __init__.py  aggregator.py  history.py  orchestrator.py
src/jarvis/stt/: __init__.py  mic_capture.py  noise_reducer.py  transcriber.py  vad.py
src/jarvis/tts/: __init__.py  engine.py
src/jarvis/ui/: __init__.py  terminal.py  web.py
src/jarvis/ui/templates/: index.html
src/jarvis/vectorstore/: README.md  __init__.py  embeddings.py  ingest.py  store.py
tests/: conftest.py  test_clap_detector.py  test_codebase_rag.py  test_integration_ingest.py  test_noise_reducer.py  test_vectorstore.py  test_web_api.py
