[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "Assistente pessoal local com STT, LLM, busca vetorial e base de conhecimento"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

dependencies = [
    # --- Core ---
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0",
    "cryptography",
    "firebase-admin",

    # --- Logging ---
    "loguru>=0.7",

    # --- Speech-to-Text ---
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.26",


    # --- LLM Local ---
    "llama-cpp-python>=0.3",

    # --- Embeddings & Vector Store ---
    "sentence-transformers>=3.0,<4.0",
    "accelerate",
    "chromadb>=0.5",
    "pypdf>=4.0",

    # --- PostgreSQL ---
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",

    # --- Async ---
    "anyio>=4.0",

    # --- UI (Terminal) ---
    "rich>=13.0",
    "textual>=0.70",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
tts = [
    "piper-tts>=1.2",
]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
]

[project.scripts]
jarvis = "jarvis.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
